[package]
name = "mcmirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
hex = "0.4.3"
log = "0.4.19"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sha1 = { version = "0.10.5", features = ["asm"] }
url = "2.4.0"
urlencoding = "2.1.2"
